// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextlessButton Component Snapshot Tests matches snapshot with default props 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-medium light-green
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
  >
    <span
      class="w-6 h-6"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
</div>
`;

exports[`TextlessButton Component Snapshot Tests matches snapshot with different color schemes 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-medium dark-brown
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
  >
    <span
      class="w-6 h-6"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
</div>
`;

exports[`TextlessButton Component Snapshot Tests matches snapshot with different sizes 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-large light-green
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
  >
    <span
      class="w-10 h-10"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
</div>
`;

exports[`TextlessButton Component Snapshot Tests matches snapshot with disabled state 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-medium light-green
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
    disabled=""
  >
    <span
      class="w-6 h-6"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
</div>
`;

exports[`TextlessButton Component Snapshot Tests matches snapshot with loading state 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-medium light-green
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
    disabled=""
  >
    <svg
      class="animate-spin h-4 w-4"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    <span
      class="w-6 h-6"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
</div>
`;

exports[`TextlessButton Component Snapshot Tests with Tooltip matches snapshot with tooltip 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-medium light-green
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
  >
    <span
      class="w-6 h-6"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
  <div
    class="absolute left-full ml-1 top-1/2 -translate-y-1/2 px-[10px] py-[5px] dark-brown text-h6 rounded-[8px] opacity-0 group-hover:opacity-100 transition-opacity duration-100"
    data-testid="tooltip"
  >
    Snapshot Tooltip
  </div>
</div>
`;

exports[`TextlessButton Component Snapshot Tests with Tooltip matches snapshot with tooltip and disabled state 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-medium light-green
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
    disabled=""
  >
    <span
      class="w-6 h-6"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
  <div
    class="absolute left-full ml-1 top-1/2 -translate-y-1/2 px-[10px] py-[5px] dark-brown text-h6 rounded-[8px] opacity-0 group-hover:opacity-100 transition-opacity duration-100"
    data-testid="tooltip"
  >
    Disabled Tooltip
  </div>
</div>
`;

exports[`TextlessButton Component Snapshot Tests with Tooltip matches snapshot with tooltip and loading state 1`] = `
<div
  class="relative flex justify-center group"
>
  <button
    class="textless-medium light-green
                active:opacity-95
                hover:opacity-90 hover:cursor-pointer
                disabled:opacity-70 disabled:cursor-not-allowed
                focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black"
    disabled=""
  >
    <svg
      class="animate-spin h-4 w-4"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    <span
      class="w-6 h-6"
    >
       
      <span
        data-testid="test-icon"
      >
        🎯
      </span>
       
    </span>
  </button>
  <div
    class="absolute left-full ml-1 top-1/2 -translate-y-1/2 px-[10px] py-[5px] dark-brown text-h6 rounded-[8px] opacity-0 group-hover:opacity-100 transition-opacity duration-100"
    data-testid="tooltip"
  >
    Loading Tooltip
  </div>
</div>
`;
